--- a/com-project-clean/src/main/resources/templates/common/Header.html
+++ b/com-project-clean/src/main/resources/templates/common/Header.html
@@ -92,9 +92,11 @@
                             </a>
                 
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">알림1</a></li>
+                            
+                                <li><a class="dropdown-item" id="selectMyInfo">내정보 조회</a></li>
                                 <li><a class="dropdown-item" href="#">알림2</a></li>
                                 <li><a class="dropdown-item" href="#">알림3</a></li>
+                                
                             </ul>
                         </li>
                     
@@ -161,6 +163,14 @@
             </div>
         </nav>
 		
+		<div id="employeeNoValue" style="display: none;" sec:authentication="principal.employeeNo"></div>
     </header>
+    
+    <script>
+    $("#selectMyInfo").click(function(){
+    	/* const employeeNo = $("#employeeNoValue").text(); */
+    	location.href="/member/selectEmployee/" + employeeNo;
+    })
+    </script>
 </body>
 </html>
