--- a/com-project-clean/src/main/resources/templates/common/payAside.html
+++ b/com-project-clean/src/main/resources/templates/common/payAside.html
@@ -77,11 +77,12 @@ section{
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-        <a href="/pay/management/employeePaySelect">직원 급여 조회</a>
-        <a href="/pay/management/employeePaySelect">우수직원 급여 조회</a>
-        <a href="/pay/management/adminPaySelect">관리자 급여 조회</a>
-        <a href="/pay/management/adminPayWaiting">관리자 급여 지급</a>
-        <a href="/pay/management/surcharge">부가요금 관리</a>
+        <a href="/admin/pay/management/employeePaySelect">직원 급여 조회</a>
+        <a href="/admin/pay/management/bestEmployeePaySelect">우수직원 급여 조회</a>
+        <a href="/admin/pay/management/bestEmployeePayWaiting">우수직원 급여 지급</a>
+        <a href="/admin/pay/management/adminPaySelect">관리자 급여 조회</a>
+        <a href="/admin/pay/management/adminPayWaiting">관리자 급여 지급</a>
+        <a href="/admin/pay/management/surcharge">부가요금 관리</a>
       </div>
 </div>
 
