--- a/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/employee/checkList/selectDenialCheckListDetails.html
@@ -17,7 +17,7 @@
 <body>
 	<input hidden type="text" th:value="${userId}" class="employeeName" id="employeeName">
 	
-	<form hidden>
+	<form hidden id="sendForm">
     	<div>
      	 	<input type="text" id="sendingMessage">
         	<input type="text" id="sendingName" >
