--- a/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
+++ b/com-project-clean/src/main/resources/templates/admin/checkList/selectDenialCheckListDetails.html
@@ -14,14 +14,12 @@
 		rel="stylesheet" type="text/css"
 		th:href="@{/css/employee/checklist/checkList.css}">
 	<script 
-		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-	<script 
 		src="https://code.jquery.com/jquery-3.4.1.min.js"></script>	
-
+      		
 </head>
 <body>
 <section>
-	<form method="post" action="admin/checklist/denial"  enctype="multipart/form-data">
+	<form method="post" action="admin/checklist/denial"  enctype="multipart/form-data" id ="formSender">
 	
 		<input type="hidden" th:value="${checkList.checkReservationNo}" class="reservationNo" name="reservationNo"> 
 		
@@ -37,8 +35,17 @@
 	<input type="button" value="블랙+" id="denial">
 </div>
 
+	<th:block sec:authorize="hasRole('ADMIN')">			
+		<h3><span hidden sec:authentication="principal.adminId" id="userId" th:value="principal.adminId"></span></h3>
+	</th:block>
+
+	<th:block sec:authorize="hasRole('EMPLOYEE')">			
+		<h3><span hidden sec:authentication="principal.employeeId" id="userId" th:value="principal.employeeId"></span></h3>
+	</th:block>
+
 <input hidden type="text" th:value="${employeeName}" class="employeeName" id="employeeName">
-<form hidden>
+
+<form hidden id="sendForm">
     <div>
         <input type="text" id="sendingMessage">
         <input type="text" id="sendingName" >
@@ -63,14 +70,16 @@
     	
 		    const jbHtml = "";
 		    const userName = document.getElementById("employeeName").value
+		    const sessionName = document.getElementById("userId").value
+			const reservationNo = $('.reservationNo').val();
 		    
 	    	document.getElementById("denial").onclick = function(){
-				const reservationNo = $('.reservationNo').val();
 	    		
 				if(confirm("해당 직원에게 블랙리스트 경고 횟수를 추가하시겠습니까? /n 직원에게 알림이 전송됩니다.")){
 	    			
 	    			$("#sendingMessage").val("체크리스트가 재반려되었습니다. 블랙리스트 경고 횟수가 증가합니다.")
-	    			$("#sendingName").val(userName)
+	    			
+		    		$("#sendingName").val(userName)
 	    			
 	    			$("#send").bind("click", function(){
 	    			});
@@ -101,10 +110,9 @@
 	    	}
 	    	
 	    	document.getElementById("accept").onclick = function(){
-				const reservationNo = $('.reservationNo').val();
 	    		if(confirm("서류를 승인하시겠습니까? 직원에게 알람이 전송됩니다.")){
 	
-	    			$("#sendingMessage").val("체크리스트가 승인되었습니다.")
+	    			$("#sendingMessage").val("체크리스트가 승인되었습니다. 급여 확인 부탁드립니다.")
 	    			$("#sendingName").val(userName)
 	    			
 	    			$("#send").bind("click", function(){
@@ -136,11 +144,13 @@
     </script>	
 </body>
 
-	<script 
-		src="/js/socket.js"></script>
+	<script
+   		src="/js/socket.js"></script> 
+   	<script 
+    	src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+    <script 
+   		src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script
 		src="http://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
-   	<script 
-		src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 
 </html>
