--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminRegist.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminRegist.html
@@ -66,7 +66,7 @@
 <body>
 
 	<button onclick="history.back()">Back</button>
-    <form action="/admin/hrCard/adminRegist" id="registForm" method="post" enctype="multipart/form-data">
+    <form action="/admin/hrCard/adminRegist" id="registForm" method="post" enctype="multipart/form-data" onsubmit="sendjs();">
 	    <table class="tg" style=" table-layout: fixed; width: 597px">
 	    <colgroup>
 	    <col style="width: 100px">
