--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
@@ -7,6 +7,7 @@
 <title>Document</title>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+
 <style>
 table td {
 	border-color: black;
@@ -35,7 +36,7 @@ table th {
 
 <body>
     
-	<!-- <div th:replace="/common/Header.html"></div>
+	<div th:replace="/common/Header.html"></div>
 	<div th:replace="/admin/adminAside.html"></div>        등록 내용 -->
 	<div th:replace="/admin/humanResource/registEmployee/adminRegistMainHeader.html"></div>
 	
@@ -83,7 +84,6 @@ table th {
 	                    	<div id="middleNumCheckMessage" >중간번호는 3~4자리 숫자를 입력하기로 약속해요</div>
 	                    	<div id="endNumCheckMessage" >끝번호는 4자리 숫자를 입력하기로 약속해요</div>
 	                    	<div id="duplicateCheckMessage" >중복된 핸드폰번호는 사용하지 않기로 약속해요</div>
-	                    
 	                    </td>
 	                  </tr>
 	                  <tr>
