--- a/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
+++ b/com-project-clean/src/main/resources/templates/admin/humanResource/registEmployee/registEmployeeList.html
@@ -36,8 +36,8 @@ table th {
 
 <body>
     
-<!-- 	 <div th:replace="/common/Header.html"></div>
-	<div th:replace="/admin/adminAside.html"></div>  -->      
+ 	 <div th:replace="/common/Header.html"></div>
+	<div th:replace="/admin/adminAside.html"></div>  
 	<div th:replace="/admin/humanResource/registEmployee/adminRegistMainHeader.html"></div>
 	
 		        <form action="/admin/hr/regist/employee" method="post" id="registForm" encType="multipart/form-data">
