--- a/com-project-clean/src/main/resources/templates/admin/pay/management/adminPaySelectInfo.html
+++ b/com-project-clean/src/main/resources/templates/admin/pay/management/adminPaySelectInfo.html
@@ -12,26 +12,20 @@
 	<section>
 		<table border="1">
 	        <tr>
-		        <th:block th:if="${pay.admin.adminPictureSaveName == null}">
-					   <td width="200px" height="200px" >
-					   	<img width="100" height="120" 
-				        	th:src="${ admin.getAdminPictureSaveRoot() + '/' + admin.getAdminPictureSaveName() }"/>
-				        </td>
-				</th:block>
-	            <th width="200px" height="200px"></th>
-	            <th width="210px" th:utext="|급여 지급 날짜 <br> <p>${ pay.payAdminDate }</p>|"><br></th>
+	            <th width="230px" height="220px"><img width="100%" height="100%" th:src="@{/adminPicture/} + ${pay.admin.adminPictureSaveName}"/></th>
+	            <th width="240px" th:utext="|급여 지급 날짜 <br> <p>${ pay.payAdminDate }</p>|"><br></th>
 	            <th width="250px" colspan="2" th:utext="|4대보험 미적용 급여 <br> <p>${ pay.admin.adminSalary }원</p>|"></th>
 	            <th width="250px" th:utext="|최종 급여 <br> <p>${ pay.payAdminFinalSalary }원</p>|"></th>
 	        </tr>
 	        <tr>
 	            <th height="30px">직원이름</th>
-	            <th colspan="3">직급</th>
-	            <th >전화번호</th>
+	            <th colspan="3">전화번호</th>
+	            <th >직급</th>
 	        </tr>
 	        <tr>
 	            <th height="90px" colspan="1" th:text="${ pay.admin.adminName }"></th>
-	            <th colspan="3" th:text="${ pay.admin.adminJob }"></th>
-	            <th th:text="${ pay.admin.adminPhone }"></th>
+	            <th colspan="3" th:text="${ pay.admin.adminPhone }"></th>
+	            <th th:text="${ pay.admin.adminJob }"></th>
 	        </tr>
     	</table>
     </section>
