--- a/com-project-clean/src/main/resources/templates/reservation/admin/adminReservationMain.html
+++ b/com-project-clean/src/main/resources/templates/reservation/admin/adminReservationMain.html
@@ -7,18 +7,11 @@
 <script src='/js/calendar.js'></script>
 <script
 	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script th:inline="javascript">
-	const message = [[${message}]];
-	if(message){
-		alert(message);
-		location.href =  '/';
-	}
-</script>
 
 <!-- 해당 날짜 클릭 이벤트 -->
 <script th:inline="javascript">
 
-	$(function(){
+$(function(){
 		var calendarEl = document.getElementById('calendar');
 		let reservation = new Object();
 		
@@ -34,12 +27,12 @@
 				/*[# th:each = "reservation, i : ${reservationDateList}"]*/
 				{
 		            title: "지원 마감 : " + /*[[${unableCountList[i.index]}]]*/,	            
-		            url: '/reservation/date/' + /*[[${dateList[i.index]}]]*/,
+		            url: '/admin/reservation/date/' + /*[[${dateList[i.index]}]]*/,
 		            start: /*[[${dateList[i.index]}]]*/
 		          },
 	          	{
 		            title: "지원 가능 : " + /*[[${ableCountList[i.index]}]]*/,
-		            url: '/reservation/date/' + /*[[${dateList[i.index]}]]*/,
+		            url: '/admin/reservation/date/' + /*[[${dateList[i.index]}]]*/,
 		            start: /*[[${dateList[i.index]}]]*/
 		          },
 				/*[/]*/
@@ -55,12 +48,11 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<div th:if ="${message} == null">
 	<div th:include="common/header.html"></div>
-	<div th:include="common/reservationAside.html"></div>
-	<div style="margin: 30px auto 300px auto; width: 1000px; height: 700px;">
+	<div th:include="common/adminReservationAside.html"></div>
+	<div style="margin: 30px auto 30px auto; width: 1000px; height: 700px;">
 		<div id='calendar'></div>
 	</div>
-	</div>
 </body>
+
 </html>
