--- a/com-project-clean/src/main/resources/templates/reservation/admin/adminReservationPaging.html
+++ b/com-project-clean/src/main/resources/templates/reservation/admin/adminReservationPaging.html
@@ -45,7 +45,7 @@
 	</div>
 
 	<script>
-		const link = "/reservation/date/[[${date}]]";
+		const link = "/admin/reservation/date/[[${date}]]";
 		let searchText = "";
 		let searchConditionExist = "[[${ selectCriteria.searchCondition }]]";
 		let searchValueExist = "[[${ selectCriteria.searchValue }]]";
