--- a/com-project-clean/src/main/resources/templates/reservation/notificationList.html
+++ b/com-project-clean/src/main/resources/templates/reservation/notificationList.html
@@ -3,37 +3,46 @@
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<link href='/css/reservation/list.css' rel='stylesheet' />
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <title>Insert title here</title>
 </head>
 <body>
-<script th:inline="javascript">
-		/*[# th:if = ${notificationMessage} != null]*/
-			alert([[${notificationMessage}]]);
-			location.href = '/';
-		/*[/]*/
+	<script th:inline="javascript">
+	const message = [[${message}]];
+	if(message){
+		alert(message);
+		location.href =  '/';
+	}
 </script>
-	<div th:include="common/header.html"></div>
-	<div th:include="common/reservationAside.html"></div>
-	<h1 align="center" th:text="${#dates.format(date, 'yyyy-MM-dd')}"></h1>
-	<table align="center" border="1">
-		<tr>
-			<th style="display: none;"></th>
-			<th>알림내용</th>
-			<th>날짜</th>
-			<th>읽음여부</th>
-		</tr>
-		<tr th:each="notification : ${ notificationList }">
-			<td style="display: none;" th:text="${ notification.notificationNo }"></td>
-			<td th:text="${ notification.notificationText }"></td>
-			<td th:text="${#dates.format(notification.notificationCreateTime, 'yyyy-MM-dd HH:mm')}"></td>
-			<td style="color:blue;" th:if="${ notification.notificationReadYn =='Y'}" th:text="확인"></td>
-			<td style="color:red;" th:if="${ notification.notificationReadYn =='N'}" th:text="미확인"></td>
-		</tr>
-	</table>
+	<div th:if ="${message} == null">
+		<div th:include="common/header.html"></div>
+		<div th:include="common/reservationAside.html"></div>
+		<h1 class="head" align="center"
+			th:text="${#dates.format(date, 'yyyy-MM-dd')}"></h1>
+		<table align="center" border="1">
+			<tr>
+				<th style="display: none;"></th>
+				<th>알림내용</th>
+				<th>날짜</th>
+				<th>읽음여부</th>
+			</tr>
+			<tr th:each="notification : ${ notificationList }">
+				<td style="display: none;"
+					th:text="${ notification.notificationNo }"></td>
+				<td th:text="${ notification.notificationText }"></td>
+				<td
+					th:text="${#dates.format(notification.notificationCreateTime, 'yyyy-MM-dd HH:mm')}"></td>
+				<td style="color: blue;"
+					th:if="${ notification.notificationReadYn =='Y'}" th:text="확인"></td>
+				<td style="color: red;"
+					th:if="${ notification.notificationReadYn =='N'}" th:text="미확인"></td>
+			</tr>
+		</table>
 
-    <div th:replace="reservation/notificationPaging.html"></div>
-	<script>
+		<div th:replace="reservation/notificationPaging.html"></div>
+		<script>
 		window.onload = function(){
 	        const employee = document.getElementsByTagName("td");
 	        
@@ -51,6 +60,6 @@
 	        }
 	    };
 	</script>
-	
+	</div>
 </body>
 </html>
