--- a/com-project-clean/src/main/resources/templates/admin/vacation/vacationSecondListPaging.html
+++ b/com-project-clean/src/main/resources/templates/admin/vacation/vacationSecondListPaging.html
@@ -44,7 +44,7 @@
 	</div>
 
 	<script>
-		const link = "/admin/hrCard/adminList";
+		const link = "/admin/vacation/standbySecondVacationList";
 		let searchText = "";
 		let searchConditionExist = "[[${ selectCriteria.searchCondition }]]";
 		let searchValueExist = "[[${ selectCriteria.searchValue }]]";
