--- a/com-project-clean/src/main/resources/templates/admin/adminAside.html
+++ b/com-project-clean/src/main/resources/templates/admin/adminAside.html
@@ -73,7 +73,8 @@ body {
       </button>
       <div class="dropdown-container">
         <a href="#">전체 인원 조회</a>
-        <a href="#">관리자 등록</a>
+        <a href="/admin/hrCard/adminList">관리자 조회</a>
+        <a href="/admin/hrCard/adminRegist">관리자 등록</a>
         <a href="#">직원 등록</a>
         <a href="#">블랙리스트 조회</a>
       </div>
@@ -82,10 +83,11 @@ body {
         <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-container">
-        <a href="#">휴가 신청</a>
+        <a href="/admin/vacation/registVacation">휴가 신청</a>
         <a href="#">나의 휴가 조회</a>
         <a href="#">휴가 전체 조회</a>
-        <a href="#">승인 대기 목록</a>
+        <a href="/admin/vacation/standbyFirstVacationList">1 승인 대기 목록</a>
+        <a href="/admin/vacation/standbySecondVacationList">1 승인 대기 목록</a>
     </div>
 </div>
 
