--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminList.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminList.html
@@ -53,25 +53,26 @@
     </style>
 </head>
 <body>
-	<div th:include="common/header.html"></div>
 	<div class="container">
 
-        <!-- 관리자 내용 -->
-           <!--  <div id="tab-2" class="tab-content">
-                <span>인사관리 카드 조회</span>
-                <form action="admin/hrCard/adminList" method="get">
-	                    <select th:with="searchCondition = ${selectCriteria.searchCondition}" name="searchCondition">
-	                        <option value="adminName" th:selected="${ searchCondition } == 'adminName'">이름</option>
-	                        <option value="adminJob"  th:selected="${ searchCondition } == 'adminJob'">직책명</option>
-	                    </select>
-	                <input type="hidden" name="currentPage" value="1">
-	                <input type="search" id="name" name="searchValue" th:value="${selectCriteria.searchValue}">
-	                <button type="button" id="search">검색</button>
-                
-                 </form> -->
-                
-                <!--  <div th:replace="hrCard/adminListPaging.html"></div> -->
-                 
+       <div class="search-area" align="center">
+		<form id="searchForm" action="/admin/hrCard/adminList" method="get" style="display: inline-block">
+				<select id="searchCondition" th:with="searchCondition = ${selectCriteria.searchCondition}"
+					 name="searchCondition">
+					<option value="adminName" th:selected="${ searchCondition } == 'adminName'">신청자명</option>
+					<option value="adminBirth" th:selected="${ searchCondition } == 'adminBirth'">생년월일</option>
+					<option value="adminHireDate" th:selected="${ searchCondition } == 'adminHireDate'">입사일</option>
+					<option value="adminJob" th:selected="${ searchCondition } == 'adminJob'">직책</option>
+					<option value="adminPhone" th:selected="${ searchCondition } == 'adminPhone'">휴대폰번호</option>
+				</select> 
+			
+			<input type="search" id="searchInput" name="searchValue" th:value="${selectCriteria.searchValue}">
+			<input type="date" id="adminBirth" name="searchValue" style="display: none">
+			<input type="date" id="adminHireDate" name="searchValue" style="display: none">
+			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
+			
+			<button class="btn btn-bs" type="submit">검색하기</button>
+		</form>
                  
          
                 <a href="/admin/hrCard/retireAdminList">퇴사자 목록</a>
@@ -100,6 +101,10 @@
                     </tbody>
                 </table>    
             </div>
+       </div>
+       
+     <input type="hidden" name="currentPage" value="1">
+	<div th:replace="admin/hrCard/adminListPaging.html"></div>
        
     <script>
         
@@ -127,40 +132,26 @@
         	hover();
         })
 
-	
-         /* 검색기능 list 출력 */
-		$("#search").click(function(){
-			$.ajax({
-				url : "gson1",
-				success:function(data){
-
-					const $table = $("#employeeList tbody");
-					$table.html("");
-					
-					for(var index in data){
-						$tr = $("<tr>");
-						$noTd = $("<td>").text(data[index].no);
-						$nameTd = $("<td>").text(data[index].name);
-						$ageTd = $("<td>").text(data[index].age);
-						$enrollDateTd = $("<td>").text(data[index].enrollDate);
-						$unknown1 = $("<td>").text(data[index].enrollDate);
-						$unknown2 = $("<td>").text(data[index].enrollDate);
-						
-						$tr.append($noTd);
-						$tr.append($nameTd);
-						$tr.append($ageTd);
-						$tr.append($enrollDateTd);
-						$tr.append($unknown1);
-						$tr.append($unknown2);
-						
-						$table.append($tr);
-					}
-				},
-				error:function(error){
-					console.log(error);
-				}
-			});
-		});
+		$("#searchCondition").change(function(){        
+			  var result = $("#searchCondition option:selected").val();
+			  var input = document.getElementById(searchInput);
+			
+			  if(result == 'adminBirth'){
+				  $('#searchInput').hide().attr("disabled", "disabled");
+				  $('#adminBirth').show();
+				  $('#adminHireDate').hide();
+				 
+			  } else if(result == 'adminHireDate'){
+				  $('#searchInput').hide().attr("disabled", "disabled");
+				  $('#adminBirth').hide().attr("disabled", "disabled");
+				  $('#adminHireDate').show();
+			  } else {
+				  $('#searchInput').show();
+			      $('#adminBirth').hide().attr("disabled", "disabled");
+				  $('#adminHireDate').hide().attr("disabled", "disabled");
+			  }
+			})
+        
        
     </script>
     
