--- a/com-project-clean/src/main/resources/templates/admin/hrCard/adminModifySelf.html
+++ b/com-project-clean/src/main/resources/templates/admin/hrCard/adminModifySelf.html
@@ -57,8 +57,8 @@
 		        <td th:text="${ adminModify.adminName }"></td>
 		        <th:block th:if="${adminModify.adminPictureSaveName}">
 				   <td colspan="2" rowspan="3">
-				   	<img width="100" height="120" id="pictureImg"
-			        	th:src="${ adminModify.getAdminPictureSaveRoot() + '/' + adminModify.getAdminPictureSaveName() }"/>
+				   <img width="100" height="120" 
+			        	th:src="@{/adminPicture/} + ${adminModify.adminPictureSaveName}"/>
 			        </td>
 			        <td style="display: none;"><input type="text" id="oldSaveRoot" name="oldSaveRoot" th:value="${adminModify.adminPictureSaveRoot}"></td>
 	           	    <td style="display: none;"><input type="text" id="oldSaveName" name="oldSaveName" th:value="${adminModify.adminPictureSaveName}"></td>
