--- a/com-project-clean/src/main/resources/templates/admin/vacation/standbyFirstVacationList.html
+++ b/com-project-clean/src/main/resources/templates/admin/vacation/standbyFirstVacationList.html
@@ -54,27 +54,31 @@
 </head>
 <body>
 
-	<div th:include="common/header.html"></div>
-	
 	
 	 <div class="container">
 
         
- 
-        <div id="tab-1" class="tab-content current">
-            <span>인사관리 카드 조회</span>
+        <div class="search-area" align="center">
+		<form id="searchForm" action="/admin/vacation/standbyFirstVacationList" method="get" style="display: inline-block">
+				<select id="searchCondition" th:with="searchCondition = ${selectCriteria.searchCondition}"
+					 name="searchCondition">
+					<option value="requestAdmin" th:selected="${ searchCondition } == 'requestAdmin'">신청자</option>
+					<option value="vacationName" th:selected="${ searchCondition } == 'vacationName'">휴가구분</option>
+					<option value="vacationStartDate" th:selected="${ searchCondition } == 'vacationStartDate'">휴가 시작일</option>
+					<option value="vacationEndDate" th:selected="${ searchCondition } == 'vacationEndDate'">휴가 마지막일</option>
+				</select> 
+			
+			<input type="search" id="searchInput" name="searchValue" th:value="${selectCriteria.searchValue}">
+			<input type="date" id="vacationStartDate" name="searchValue" style="display: none">
+			<input type="date" id="vacationEndDate" name="searchValue" style="display: none">
+			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
+			
+			<button class="btn btn-bs" type="submit">검색하기</button>
+		</form>
 
-            <select name="category" id="category">
-                <option value="empNo" selected>사원번호</option>
-                <option value="empName">휴가구분</option>
-                <option value="empBirth">생년월일</option>
-                <option value="empAddress">주소</option>
-                <option value="empPhone">전화번호</option>
-            </select>
-            <input type="text" name="categoryValue">
-            <button type="button" id="search">검색</button>
+		
 
-            <table id="vacationList" border="1">
+            <table id="vacationList" border="1" width="1000px">
                 <thead>
                     <tr>
                         <th>신청번호</th>
@@ -82,7 +86,6 @@
                         <th>휴가시작일</th>
                         <th>휴가종료일</th>
                         <th>휴가구분</th>
-<!--                         <th>연차 사용 횟수</th> -->
                         <th>1차 승인 여부</th>
                  		
                     </tr>
@@ -94,7 +97,6 @@
 						<td th:text="${ index.vacationStartDate }"></td>
 						<td th:text="${ index.vacationEndDate }"></td>
 						<td th:text="${ index.vacationName }"></td>
-<!-- 						<td th:text="${ index.adminList.annualVacationUse }"></td> -->
 						<td th:text="${ index.vacationFirstConfirmYn }"></td>
 					</tr>
                 </tbody>
@@ -102,6 +104,8 @@
         </div>
 	</div>
 	
+	<input type="hidden" name="currentPage" value="1">
+	<div th:replace="admin/vacation/vacationListpaging.html"></div>
 	<script>
 	 /* hover event */
 	    function hover(){
@@ -122,12 +126,40 @@
 	        }
 	    };
 	    
+	    
+	    
 	    /* 시작 할 때 hover event */
         $(function(){
         	hover();
         })
+
 	
 	</script>
+	
+	<script>
+			
+			$("#searchCondition").change(function(){        
+			  var result = $("#searchCondition option:selected").val();
+			  var input = document.getElementById(searchInput);
+			
+			  if(result == 'vacationStartDate'){
+				  $('#searchInput').hide().attr("disabled", "disabled");
+				  $('#vacationStartDate').show();
+				  $('#vacationEndDate').hide();
+				 
+			  } else if(result == 'vacationEndDate'){
+				  $('#searchInput').hide().attr("disabled", "disabled");
+				  $('#vacationStartDate').hide().attr("disabled", "disabled");
+				  $('#vacationEndDate').show();
+			  } else {
+				  $('#searchInput').show();
+			      $('#vacationStartDate').hide().attr("disabled", "disabled");
+				  $('#vacationEndDate').hide().attr("disabled", "disabled");
+			  }
+			})
+			
+		</script>
+	
 
 </body>
 </html>
