--- a/com-project-clean/src/main/resources/templates/admin/vacation/standbySecondVacationList.html
+++ b/com-project-clean/src/main/resources/templates/admin/vacation/standbySecondVacationList.html
@@ -54,25 +54,28 @@
 </head>
 <body>
 
-	<div th:include="common/header.html"></div>
 	
 	
 	 <div class="container">
+	 <div class="search-area" align="center">
+		<form id="searchForm" action="/admin/vacation/standbySecondVacationList" method="get" style="display: inline-block">
+				<select th:with="searchCondition = ${selectCriteria.searchCondition}"
+					id="searchCondition" name="searchCondition">
+					<option value="requestAdmin" th:selected="${ searchCondition } == 'requestAdmin'">신청자</option>
+					<option value="vacationName" th:selected="${ searchCondition } == 'vacationName'">휴가구분</option>
+					<option value="vacationStartDate" th:selected="${ searchCondition } == 'vacationStartDate'">휴가 시작일</option>
+					<option value="vacationEndDate" th:selected="${ searchCondition } == 'vacationEndDate'">휴가 마지막일</option>
+				</select> 
+			
+			<input type="search" id="searchInput" name="searchValue" th:value="${selectCriteria.searchValue}">
+			<input type="date" id="vacationStartDate" name="searchValue" style="display: none">
+			<input type="date" id="vacationEndDate" name="searchValue" style="display: none">
+			<input type="text" style="display: none;"> <!-- enter - submit 방지 -->
+		
+			<button type="submit">검색하기</button>
+		</form>
 
-        
- 
-        <div id="tab-1" class="tab-content current">
-            <span>인사관리 카드 조회</span>
-
-            <select name="category" id="category">
-                <option value="empNo" selected>사원번호</option>
-                <option value="empName">휴가구분</option>
-                <option value="empBirth">생년월일</option>
-                <option value="empAddress">주소</option>
-                <option value="empPhone">전화번호</option>
-            </select>
-            <input type="text" name="categoryValue">
-            <button type="button" id="search">검색</button>
+  
 
             <table id="vacationList" border="1">
                 <thead>
@@ -98,7 +101,8 @@
             </table>
         </div>
 	</div>
-	
+	<input type="hidden" name="currentPage" value="1">
+	<div th:replace="admin/vacation/vacationSecondListpaging.html"></div>
 	<script>
 	 /* hover event */
 	    function hover(){
@@ -123,6 +127,27 @@
         $(function(){
         	hover();
         })
+			
+			$("#searchCondition").change(function(){        
+			  var result = $("#searchCondition option:selected").val();
+			  var input = document.getElementById(searchInput);
+			
+			  if(result == 'vacationStartDate'){
+				  $('#searchInput').hide().attr("disabled", "disabled");
+				  $('#vacationStartDate').show();
+				  $('#vacationEndDate').hide();
+				 
+			  } else if(result == 'vacationEndDate'){
+				  $('#searchInput').hide().attr("disabled", "disabled");
+				  $('#vacationStartDate').hide().attr("disabled", "disabled");
+				  $('#vacationEndDate').show();
+			  } else {
+				  $('#searchInput').show();
+			      $('#vacationStartDate').hide().attr("disabled", "disabled");
+				  $('#vacationEndDate').hide().attr("disabled", "disabled");
+			  }
+			})
+			
 	
 	</script>
 
