20220722 1644 에러페이지 완료

--- a/com-project-clean/src/main/resources/templates/common/adminReservationAside.html
+++ b/com-project-clean/src/main/resources/templates/common/adminReservationAside.html
@@ -72,8 +72,8 @@ body {
         <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-        <a href="/admin/reservation/main">내 일정 확인</a>
-        <a class="notificationA"  href="/admin/notification/list">알림 <span class="notificationSpan"></span></a>
+        <a href="/admin/reservation/main">예약일정 관리</a>
+        <a class="notificationA"  href="/admin/notification/list">알림<span class="notificationSpan"></span></a>
       </div>
 </div>
 <script type="text/javascript">
